<resources>
    <string name="app_name">Cashless</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_admin">Admin</string>
    <string name="nav_item_entrance">Entrance</string>
    <string name="nav_item_pay_payout">Pay/Pay out</string>
    <string name="nav_item_bar">Bar</string>
    <string name="nav_item_security">Security</string>
    <string name="nav_sub_menu">Additional</string>
    <string name="nav_sub_menu_settings">Settings</string>
    <string name="nav_sub_menu_logout">Logout</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Blabla</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_security">Security</string>
    <string name="title_activity_pay">Pay</string>
    <string name="title_activity_entrance">Entrance</string>
</resources>